# BingWallpapers

./: BingWallpapers.cabal  Cargo.toml  LICENSE  README.md  build.rs  makefile
Ubuntu/: BingWallpapers.cabal  main.go
Ubuntu/app/: Main.hs
app/: Cocoa-Calls.m  Main.hs  Makefile  cocoa.m
macOS/: BingWallpapers.cabal
macOS/app/: Cocoa-Calls.m
src/: Cocoa-Bindings.m  main.rs
