name:                BingWallpapers
version:             0.2.0.15
-- synopsis:
-- description:
homepage:            https://github.com/nabeelomer/BingWallpapers
license:             BSD3
license-file:        LICENSE
author:              Nabeel Omer
maintainer:          me@nabeelomer.me
copyright:           2017 Nabeel Omer
category:            Desktop
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable BingWallpapers
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N app/cocoa.o
  build-depends:       base, HTTP, process, http-conduit, bytestring, text, json, split
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nabeelomer/BingWallpapers
